# pytest-unittest-id-runner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest_unittest_id_runner.py
.github/workflows/: python-package.yml  python-publish.yml
tests/: test_plugin.py
